--- a/app/assets/stylesheets/extensions.css.scss.erb
+++ b/app/assets/stylesheets/extensions.css.scss.erb
@@ -88,7 +88,7 @@ a.action:hover, a.action:active { border-color: #999; color: #333; }
       .inline-errors { display: inline-block; background: #c31f1c; color: #fff; font-size: 0.75em; padding: 0.5em 0.85em; margin-top: -1em; float: left; }
     }
     .inputs .fields {
-      margin: 0.6em 0;
+      margin: 0.5em 0 1em;
       padding: 1em;
       background: #e6e6e6;
       .remove_nested_fields { margin-left: 18%; }
@@ -96,7 +96,7 @@ a.action:hover, a.action:active { border-color: #999; color: #333; }
     legend {
       display: block;
       font-family: 'Bitter', Helvetica, Arial, sans-serif;
-      margin: 1em 0;
+      margin: 1em 0 0;
       font-size: 1.2em;
       span { font-weight: bold; }
     }
