--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -5,6 +5,17 @@
     <%= f.input :title %>
     <%= f.input :slug, ( resource.persisted? ? { :input_html => { :disabled => true } } : { } ) %>
     <%= f.input :secret %>
+    <%= f.input :use_centres, disable_if_persisted(resource, { :input_html => { :disabled => true } }).merge({ :as => :select, :label => "Event type", :collection => { "Hacks shown together in list" => 0, "Hacks grouped by centre" => 1 }, :include_blank => false }) %>
+  <% end %>
+
+  <% unless resource.new_record? or !resource.use_centres %>
+    <%= f.inputs "Centres" do %>
+      <%= f.semantic_fields_for :centres do |centre_fields| %>
+        <%= centre_fields.input :name %>
+        <%= centre_fields.input :slug %>
+      <% end %>
+      <%= f.link_to_add "Add a centre", :centres %>
+    <% end %>
   <% end %>
 
   <%= f.inputs "Award Categories" do %>
