--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,35 +1,40 @@
-<% if @project.errors.any? %>  
-<ul class="errors">  
+<% if @project.errors.any? %>
+<ul class="errors">
  	<% @project.errors.full_messages.each do |msg| %>
  	  <% next if msg == "Image file name can't be empty" %>
-	<li class="message message_error"><%= msg %></li>  
-	<% end %>  
-</ul>  
+	<li class="message message_error"><%= msg %></li>
+	<% end %>
+</ul>
 <% end %>
 
-<% if @event.has_secret? -%>
 <fieldset class="secret">
+<% if @event.has_secret? -%>
     <p>
         <%= f.label :my_secret, "Event Password <span>*</span>".html_safe %>
         <%= f.text_field :my_secret %>
         <span class="field_description">Enter the event password, as given out at the hack day, to <%= (@project.new_record?) ? "add" : "update" %> this project.</span>
-    </p> 
-</fieldset>
+    </p>
 <% elsif !@project.new_record? -%>
-<fieldset class="secret">
     <p>
         <%= f.label :my_secret, "Project Password <span>*</span>".html_safe %>
         <%= f.text_field :my_secret %>
         <span class="field_description">Enter the project password to make changes to this project.</span>
-    </p> 
-</fieldset>
+    </p>
 <% end -%>
+<% if @event.use_centres %>
+    <p>
+        <%= f.label :centre_id, "Centre <span>*</span>".html_safe %>
+        <%= f.collection_select :centre_id, @event.centres.all, :id, :name, :include_blank => true %>
+        <span class="field_description">The centre where you created this project.</span>
+    </p>
+<% end %>
+</fieldset>
 
 <fieldset>
     <p>
         <%= f.label :title, "Project Title <span>*</span>".html_safe %>
         <%= f.text_field :title, :class => 'biginput' %>
-    </p>                               
+    </p>
     <p>
         <%= f.label :team, "Project Team <span>*</span>".html_safe %>
         <%= f.text_field :team %>
@@ -37,7 +42,7 @@
     </p>
     <p>
         <%= f.label :url, "Project URL".html_safe %>
-        <%= f.text_field :url %> 
+        <%= f.text_field :url %>
         <span class="field_description">The URL to the website or prototype of your project.</span>
     </p>
     <p>
@@ -45,76 +50,76 @@
         <%= f.text_field :summary, :maxlength => 180 %>
         <span class="field_description">An overview of your project in 180 characters or less.</span>
     </p>
-</fieldset>             
+</fieldset>
 
 <fieldset>
 <p>
     <%= f.label :description, "Description of your project <span>*</span>".html_safe %>
-    <%= f.text_area :description %>                          
+    <%= f.text_area :description %>
     <span class="field_description">Tell us about your project. You can use Markdown in this field.</span>
-</p>                                                                                
+</p>
 <% unless @project.data.nil? or @project.data.empty? %>
 <p>
     <%= f.label :data, "Data used in your project" %>
-    <%= f.text_area :data %>                          
+    <%= f.text_area :data %>
     <span class="field_description">What data did you use in your project? You can use Markdown in this field.</span>
 </p>
 <% end -%>
 <% unless @project.ideas.nil? or @project.ideas.empty? %>
 <p>
     <%= f.label :ideas, "Ideas for taking your project forwards" %>
-    <%= f.text_area :ideas %>                          
+    <%= f.text_area :ideas %>
     <span class="field_description">What else would you like to add to your project? You can use Markdown in this field.</span>
-</p>                    
+</p>
 <% end -%>
 <% unless @project.costs.nil? or @project.costs.empty? %>
 <p>
     <%= f.label :costs, "Costs for taking your project forwards" %>
-    <%= f.text_area :costs %>                          
+    <%= f.text_area :costs %>
     <span class="field_description">What costs, if any, are involved in taking your project forwards? You can use Markdown in this field.</span>
 </p>
-<% end -%>     
-</fieldset> 
+<% end -%>
+</fieldset>
 
 <fieldset>
 <p>
     <%= f.label :twitter, "Twitter accounts" %>
-    <%= f.text_field :twitter %>                          
+    <%= f.text_field :twitter %>
     <span class="field_description">You can list multiple Twitter accounts with commas. We'll link them automagically.</span>
-</p>                                                                                
+</p>
 <p>
     <%= f.label :github_url, "GitHub URL" %>
-    <%= f.text_field :github_url %>         
+    <%= f.text_field :github_url %>
 </p>
 <p>
     <%= f.label :svn_url, "SVN URL" %>
-    <%= f.text_field :svn_url %>         
-</p>                     
+    <%= f.text_field :svn_url %>
+</p>
 <p>
     <%= f.label :code_url, "Code URL" %>
     <%= f.text_field :code_url %>
-    <span class="field_description">You can link to any other repository for your code here.</span>         
-</p>                                                           
+    <span class="field_description">You can link to any other repository for your code here.</span>
+</p>
 <p>
     <%= f.label :image, "Screenshot <span>*</span>".html_safe %>
-    <%= f.file_field :image %> 
-    <span class="field_description">Upload an image or screenshot of your app. Ideal size 1080x640.</span> 
+    <%= f.file_field :image %>
+    <span class="field_description">Upload an image or screenshot of your app. Ideal size 1080x640.</span>
 </p>
-</fieldset>          
+</fieldset>
 
-<% if @project.new_record? %>        
+<% if @project.new_record? %>
     <% unless @event.has_secret? -%>
     <fieldset class="secret">
         <p>
             <%= f.label :secret, "Choose a project password <span>*</span>".html_safe %>
             <%= f.text_field :secret %>
             <span class="field_description">Enter a word which will be required to make further changes to this project.</span>
-        </p> 
+        </p>
     </fieldset>
     <% end -%>
 
-    <p>Once you're happy with your project details, hit <em>Create</em> below. Your project will appear instantly on the <%= @event.title %> event page.</p>          
+    <p>Once you're happy with your project details, hit <em>Create</em> below. Your project will appear instantly on the <%= @event.title %> event page.</p>
     <p class="submit"><%= f.submit "Create Project" %></p>
-<% else %> 
+<% else %>
     <p class="submit"><%= f.submit "Save Project" %></p>
 <% end %>
