Copy changes to the new project form

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -118,7 +118,7 @@
     </fieldset>
     <% end -%>
 
-    <p>Once you're happy with your project details, hit <em>Create</em> below. Your project will appear instantly on the <%= @event.title %> event page.</p>
+    <p>Once you're happy with the details, hit <em>Create</em> below. Your project will appear immediately on the <%= @event.title %> event page.</p>
     <p class="submit"><%= f.submit "Create Project" %></p>
 <% else %>
     <p class="submit"><%= f.submit "Save Project" %></p>
