--- a/app/assets/stylesheets/extensions.css.scss.erb
+++ b/app/assets/stylesheets/extensions.css.scss.erb
@@ -43,7 +43,7 @@ table, #content table {
   }
 }
 
-a.action { border: 1px solid #ccc; display: inline-block; margin: 1.8em 0 0.8em; padding: 5px 8px; }
+a.action { border: 1px solid #ccc; display: inline-block; font-size: 1.2em; margin: 1em 0 0.8em; padding: 0.5em 0.75em; }
 a.action:hover, a.action:active { border-color: #999; color: #333; }
 
 .flash { box-shadow: #ddd 2px 2px 2px; font-size: 1.2em; font-weight: bold; color: #fff; margin: 1em 0; padding: 0.75em; }
