Allow new project creation to be enabled and disabled on for each event

--- a/app/assets/stylesheets/base.css.scss.erb
+++ b/app/assets/stylesheets/base.css.scss.erb
@@ -127,11 +127,11 @@ body { background: #111111; font-family: 'Helvetica Neue', Helvetica, Arial, san
 
 /** Footer **/
 
-#footer { color: #c0c0c0; margin: 20px 0px 20px; }
+#footer { color: #c0c0c0; margin: 20px 0px 20px; font-size: 0.9em; }
 #footer .footer_line { margin-bottom: 10px; }
 
-#footer a, #footer a:link, #footer a:visited { color: #fff; text-decoration: none; }
-#footer a:hover, #footer a:active { color: #F5A7A1; text-decoration: underline; }
+#footer a, #footer a:link, #footer a:visited { color: #fff; padding: 0.5em 0.8em; text-decoration: none; }
+#footer a:hover, #footer a:active { background: #B63322; color: #fff; text-decoration: underline; }
 
 
 /** From old CSS **/
