--- a/app/assets/stylesheets/extensions.css.scss.erb
+++ b/app/assets/stylesheets/extensions.css.scss.erb
@@ -101,5 +101,9 @@ a.action:hover, a.action:active { border-color: #999; color: #333; }
       span { font-weight: bold; }
     }
     input[type=text], input[type=url], input[type=email], textarea { padding: 0.5em; }
+
+    .boolean {
+      label { width: auto; padding-left: 0; }
+    }
   }
 }
