--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -6,7 +6,11 @@
     <%= f.input :slug, ( resource.persisted? ? { :input_html => { :disabled => true } } : { } ) %>
     <%= f.input :secret, :label => "Event secret", :input_html => { :placeholder => "If blank, projects must create their own passwords"} %>
     <%= f.input :url, :label => "Event homepage", :input_html => { :placeholder => "http://" } %>
-    <%= f.input :use_centres, disable_if_persisted(resource, { :input_html => { :disabled => true } }).merge({ :as => :select, :label => "Event type", :collection => { "Hacks shown together in list" => 0, "Hacks grouped by centre" => 1 }, :include_blank => false }) %>
+    <%= f.input :use_centres, disable_if_persisted(resource, { :input_html => { :disabled => true } }).merge({ :as => :select, :label => "Event type", :collection => { "Hacks shown together in list" => false, "Hacks grouped by centre" => true }, :include_blank => false }) %>
+  <% end %>
+
+  <%= f.inputs do %>
+    <%= f.input :enable_project_creation, :label => "Allow new hacks to be created?" %>
   <% end %>
 
   <% unless resource.new_record? or !resource.use_centres %>
