Added the "finalist" award type, and award categories can be "featured"

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -32,6 +32,7 @@
 			.project_award.award_overall.level_1 { background-image: url(<%= asset_path 'icons/mini_first_overall.png' %>); color: #C6A053; }
 			.project_award.award_overall.level_2 { background-image: url(<%= asset_path 'icons/mini_second_overall.png' %>); color: #aaa; }
 			.project_award.award_mention { background-image: url(<%= asset_path 'icons/mini_special_mention.png' %>); color: #86659A; }
+			.project_award.award_finalist { padding-left: 0; color: #666; }
 
 			.project_summary { font-size: 1.2em; color: #666; }
 		}
