--- a/app/assets/stylesheets/projects.css.scss.erb
+++ b/app/assets/stylesheets/projects.css.scss.erb
@@ -37,6 +37,7 @@
     .award.award_overall.level_1 { background: #FFF4E6 url(<%= asset_path 'icons/first_overall.png' %>) no-repeat center 11px; padding-top: 50px; border-color: #C6A053; }
 	.award.award_overall.level_2 { background: #eee url(<%= asset_path 'icons/second_overall.png' %>) no-repeat center 11px; padding-top: 50px; border-color: #aaa; }
 	.award.award_mention { background: #EDE7FF url(<%= asset_path 'icons/special_mention.png' %>) no-repeat center 11px; padding-top: 50px; border-color: #86659A; }
+  .award.award_finalist { background: #eee; border-color: #bbb; }
 
 	#description p { font-family: Georgia, Times, sans-serif; font-size: 1.3em; font-style: italic; line-height: 1.3em; margin-bottom: 1em;  }
 
