Refactor Admin#EventsController

--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -15,6 +15,6 @@
         <th></th>
       </tr>
     </thead>
-    <%= render :partial => "event", :collection => collection %>
+    <%= render :partial => "event", :collection => events %>
   </tbody>
 </table>
