--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:title) { "Edit #{resource.title}" } %>
+<% content_for(:title) { "Edit #{event.title}" } %>
 
-<h1>Edit <%= resource.title %></h1>
+<h1>Edit <%= event.title %></h1>
 
 <%= render :partial => "form" %>
