--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -14,6 +14,6 @@
         <th></th>
       </tr>
     </thead>
-    <%= render :partial => "project", :collection => collection %>
+    <%= render :partial => "project", :collection => projects %>
   </tbody>
 </table>
