Refactor EventsController and spec

--- a/app/views/events/_display_winners.html.erb
+++ b/app/views/events/_display_winners.html.erb
@@ -1,7 +1,7 @@
 <div class="winners">
-    <h2><%= pluralize @event.winners.count, "winner" %></h2>
+    <h2><%= pluralize event.winners.count, "winner" %></h2>
 
-    <ul><% @event.winners.each do |project| -%>
+    <ul><% event.winners.each do |project| -%>
         <%= render :partial => 'single_project', :locals => {:project => project, :winners => true} %>
     <% end -%>
     </ul>
