--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
 <h2>Event List</h2>
 
 <ul>
-  <% @events.each do |event| %>
+  <% events.each do |event| %>
   <li><%= link_to event.title, event_path(event) %></li>
   <% end %>
 <ul>
