--- a/app/views/events/_centre_list.html.erb
+++ b/app/views/events/_centre_list.html.erb
@@ -1,7 +1,7 @@
 <ul class="centre_list">
-    <% @event.centres.each do |c| %>
+    <% event.centres.each do |c| %>
     <li>
-      <a href="<%= centre_event_path(@event, c.slug) %>" title="<%= c.name %>">
+      <a href="<%= centre_event_path(event, c.slug) %>" title="<%= c.name %>">
         <h3><%= c.name %></h3>
         <span><%= pluralize c.projects.count, "hack" %></span>
       </a>
