--- a/app/views/events/_display_standard.html.erb
+++ b/app/views/events/_display_standard.html.erb
@@ -1,6 +1,6 @@
 <div id="projects" class="projects">
     <ul>
-        <% @event.projects.each do |project| -%>
+        <% event.projects.each do |project| -%>
             <%= render :partial => 'single_project', :locals => {:project => project, :winners => false} %>
         <% end -%>
     </ul>
