--- a/app/views/events/_event_header.html.erb
+++ b/app/views/events/_event_header.html.erb
@@ -1,6 +1,5 @@
-<% content_for(:title) { "#{@event.title}" } %>
+<% content_for(:title) { "#{event.title}" } %>
 
-<div class="left"><h1><%= @event.title %></h1></div>
-<%- if @event.enable_project_creation -%><div class="right"><%= link_to "New project", new_event_project_path(@event), :class => 'action' %></div><%- end -%>
+<div class="left"><h1><%= event.title %></h1></div>
+<%- if event.enable_project_creation -%><div class="right"><%= link_to "New project", new_event_project_path(event), :class => 'action' %></div><%- end -%>
 <div class="clear"></div>
-
