--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,17 +1,17 @@
 <%= render :partial => 'event_header' %>
 
 <div class="migrate_rs">
-  <%= link_to "See the full event details", ( @event.url.blank? ? "http://rewiredstate.org/events/#{@event.slug}" : @event.url ) %>
+  <%= link_to "See the full event details", ( event.url.blank? ? "http://rewiredstate.org/events/#{event.slug}" : event.url ) %>
 </div>
 
-<% if @event.winners.any? %>
+<% if event.winners.any? %>
     <%= render :partial => 'display_winners' %>
 <% end %>
 
 <div class="all_projects">
-  <h2><%= pluralize @event.projects.size, "projects" %><% if @event.use_centres %> from <%= pluralize @event.centres.size, "centres" %><% end %></h2>
+  <h2><%= pluralize event.projects.size, "projects" %><% if event.use_centres %> from <%= pluralize event.centres.size, "centres" %><% end %></h2>
 
-  <% if @event.use_centres %>
+  <% if event.use_centres %>
     <%= render :partial => 'centre_list' %>
   <% else %>
     <%= render :partial => 'display_standard' %>
